<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_main_tab"
        android:title="@string/action_main_tab"
        android:enabled="true"
        android:icon="@drawable/ic_main"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_history_tab"
        android:title="@string/action_history_tab"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_wishlist_tab"
        android:title="@string/action_wishlist_tab"
        android:enabled="true"
        android:icon="@drawable/ic_wishlist"
        app:showAsAction="ifRoom"/>

</menu>